--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 09:44:00 AM</p>
+    <p class="lastupdate">09/04/2020 09:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.4&#176;F</td>
+        <td class="data">72.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.4&#176;F</td>
+        <td class="data">72.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.4&#176;F</td>
+        <td class="data">72.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.8&#176;F</td>
+        <td class="data">56.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">58%</td>
+        <td class="data">57%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.957 inHg (0.014)</td>
+        <td class="data">29.960 inHg (0.015)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">3 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.6&#176;F</td>
+        <td class="data">74.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:43:50 AM">
-            71.4</span><br/>
+          <span title="09:48:16 AM">
+            72.1</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:43:50 AM" class="hival">
-            71.4</span>
+          <span title="09:48:16 AM" class="hival">
+            72.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:36:23 AM">
             83</span><br/>
-          <span title="09:40:54 AM">
-            58</span>
+          <span title="09:46:00 AM">
+            57</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          7
+          6
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 18 hours, 57 minutes</td>
+      <td class="data">2 days, 19 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 18 hours, 57 minutes</td>
+      <td class="data">2 days, 19 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
