--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 09:59:00 AM</p>
+    <p class="lastupdate">09/04/2020 10:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">73.6&#176;F</td>
+        <td class="data">74.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">73.6&#176;F</td>
+        <td class="data">74.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">73.6&#176;F</td>
+        <td class="data">74.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">56.4&#176;F</td>
+        <td class="data">56.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">55%</td>
+        <td class="data">53%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.959 inHg (0.009)</td>
+        <td class="data">29.958 inHg (0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NE (45&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.1&#176;F</td>
+        <td class="data">75.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:58:42 AM">
-            73.6</span><br/>
+          <span title="10:03:28 AM">
+            74.2</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:58:42 AM" class="hival">
-            73.6</span>
+          <span title="10:03:28 AM" class="hival">
+            74.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:58:42 AM">
-            56.4</span><br/>
+          <span title="10:00:14 AM">
+            56.6</span><br/>
           <span title="03:56:31 AM">
             48.6</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:36:23 AM">
             83</span><br/>
-          <span title="09:52:00 AM">
-            55</span>
+          <span title="10:03:58 AM">
+            53</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 19 hours, 12 minutes</td>
+      <td class="data">2 days, 19 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 19 hours, 12 minutes</td>
+      <td class="data">2 days, 19 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
