--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 10:09:00 AM</p>
+    <p class="lastupdate">09/04/2020 10:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">74.7&#176;F</td>
+        <td class="data">75.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">74.7&#176;F</td>
+        <td class="data">75.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">74.7&#176;F</td>
+        <td class="data">75.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.9&#176;F</td>
+        <td class="data">56.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">52%</td>
+        <td class="data">51%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.958 inHg (0.006)</td>
+        <td class="data">29.953 inHg (-0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNW (338&#176;)</td>
+        <td class="data">2 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.4&#176;F</td>
+        <td class="data">75.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:07:56 AM">
-            74.7</span><br/>
+          <span title="10:13:44 AM">
+            75.5</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:07:56 AM" class="hival">
-            74.7</span>
+          <span title="10:13:44 AM" class="hival">
+            75.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:36:23 AM">
             83</span><br/>
-          <span title="10:06:30 AM">
-            52</span>
+          <span title="10:12:30 AM">
+            51</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          13
+          12
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 19 hours, 22 minutes</td>
+      <td class="data">2 days, 19 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 19 hours, 22 minutes</td>
+      <td class="data">2 days, 19 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
