--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 11:09:00 AM</p>
+    <p class="lastupdate">09/04/2020 11:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.9&#176;F</td>
+        <td class="data">83.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.9&#176;F</td>
+        <td class="data">83.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.9&#176;F</td>
+        <td class="data">83.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.9&#176;F</td>
+        <td class="data">53.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">37%</td>
+        <td class="data">36%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.936 inHg (-0.028)</td>
+        <td class="data">29.937 inHg (-0.026)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">3 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.1&#176;F</td>
+        <td class="data">77.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:08:44 AM">
-            83.0</span><br/>
+          <span title="11:13:10 AM">
+            83.6</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:08:44 AM" class="hival">
-            83.0</span>
+          <span title="11:13:10 AM" class="hival">
+            83.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:08:02 AM">
-            77.1</span><br/>
+          <span title="11:11:02 AM">
+            77.2</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 20 hours, 22 minutes</td>
+      <td class="data">2 days, 20 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 20 hours, 22 minutes</td>
+      <td class="data">2 days, 20 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
